--- a/templates/ana_sayfa.html
+++ b/templates/ana_sayfa.html
@@ -1,18 +1,12 @@
-
-<!DOCTYPE html>
-<html lang="tr">
-<head>
-    <meta charset="UTF-8">
-    <title>Eğitim Merkezleri</title>
-</head>
-<body>
-    <h1>Eğitim Merkezleri</h1>
-    <ul>
-    {% for merkez in merkezler %}
-        <li><a href="{% url 'egitim_merkezi_detay' merkez.id %}">{{ merkez.ad }}</a></li>
-    {% empty %}
-        <li>Hiç merkez yok.</li>
-    {% endfor %}
-    </ul>
-</body>
-</html>
+{% extends "base.html" %}
+{% block title %}Eğitim Merkezleri{% endblock %}
+{% block content %}
+<h2>Eğitim Merkezleri</h2>
+<ul>
+  {% for merkez in merkezler %}
+    <li><a href="{% url 'egitim_merkezi_detay' merkez.id %}">{{ merkez.ad }}</a></li>
+  {% empty %}
+    <li>Henüz eğitim merkezi bulunamadı.</li>
+  {% endfor %}
+</ul>
+{% endblock %}
