--- a/templates/ana_sayfa.html
+++ b/templates/ana_sayfa.html
@@ -1,3 +1,4 @@
+
 {% extends "base.html" %}
 {% block title %}Eğitim Merkezleri{% endblock %}
 {% block content %}
@@ -9,4 +10,5 @@
     <li>Henüz eğitim merkezi bulunamadı.</li>
   {% endfor %}
 </ul>
+<p style="margin-top: 2rem; font-size: small;">Sayfa: {{ site_adi }}</p>
 {% endblock %}
