--- a/templates/ana_sayfa.html
+++ b/templates/ana_sayfa.html
@@ -2,13 +2,17 @@
 {% extends "base.html" %}
 {% block title %}Eğitim Merkezleri{% endblock %}
 {% block content %}
-<h2>Eğitim Merkezleri</h2>
-<ul>
-  {% for merkez in merkezler %}
-    <li><a href="{% url 'egitim_merkezi_detay' merkez.id %}">{{ merkez.ad }}</a></li>
-  {% empty %}
-    <li>Henüz eğitim merkezi bulunamadı.</li>
-  {% endfor %}
-</ul>
-<p style="margin-top: 2rem; font-size: small;">Sayfa: {{ site_adi }}</p>
+<div class="section">
+  <h2 class="title">Eğitim Merkezleri</h2>
+  <div class="card">
+    <ul>
+      {% for merkez in merkezler %}
+        <li><a href="{% url 'egitim_merkezi_detay' merkez.id %}">{{ merkez.ad }}</a></li>
+      {% empty %}
+        <li>Henüz eğitim merkezi bulunamadı.</li>
+      {% endfor %}
+    </ul>
+  </div>
+  <p style="margin-top: 2rem; font-size: small;">Sayfa: {{ site_adi }}</p>
+</div>
 {% endblock %}
